test/samples/error/err_unknown_var.w
// commenting out until Shuai fixes
var x = y